# portrainer-control

./: .dockerignore  .env.dev  .gitignore  .pylintrc  .style.yapf  Dockerfile  README.md  pyproject.toml  startup.sh
app/: main.py  settings.py  utils.py
app/api/: dependencies.py  routers.py
app/modules/commander/: core.py  router.py  service.py
app/modules/commander/schemas/: __init__.py  api.py  commander.py
app/modules/opensearch/: router.py  service.py
app/modules/opensearch/schemas/: auth.py
app/tests/commander/: __init__.py  test_agent_commander.py  test_agent_commander_start_stop.py  test_containers_start_stop.py  test_create_container.py  test_delete_container.py  test_environment.py  test_environment_creation.py  test_environments.py  test_images.py  test_load_image.py  test_push.py  test_registries.py  test_tag.py
