[tool.poetry]
name = "portrainer-control"
version = "0.0.1"
description = ""
authors = ["Artem Zhitihin <71713499+qTemiO@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
yapf = "^0.43.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
